# Project4-Event

./: README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  index.css  index.js
client/src/components/AboutHost/: AboutHost.css  AboutHost.jsx
client/src/components/ErrorMessage/: ErrorMessage.css  ErrorMessage.jsx
client/src/components/EventCard/: EventCard.css  EventCard.jsx
client/src/components/EventDetailCard/: EventDetailCard.css  EventDetailCard.jsx
client/src/components/NavBar/: NavBar.css  NavBar.jsx
client/src/components/ProfileInfoCard/: ProfileCardInfo.jsx  ProfileInfoCard.css
client/src/components/Tab/: Tab.css  Tab.jsx
client/src/hooks/: userUser.js
client/src/pages/EventDetailPage/: EventDetailPage.css  EventDetailPage.jsx
client/src/pages/HomePage/: HomePage.css  HomePage.jsx
client/src/pages/LogInPage/: LogInPage.css  LogInPage.jsx
client/src/pages/NewEventPage/: NewEventPage.css  NewEventPage.jsx
client/src/pages/ProfileEditPage/: ProfileEditPage.css  ProfileEditPage.jsx
client/src/pages/ProfilePage/: ProfilePage.css  ProfilePage.jsx
client/src/pages/SignUpPage/: SignUpPage.css  SignUpPage.jsx
client/src/utils/: eventService.js  tokenService.js  userService.js  validations.js
server/: pyproject.toml
server/events/: models.py  serializers.py  urls.py  views.py
server/events/migrations/: 0003_event_participant.py
server/project/: settings.py  urls.py
server/users/: authentication.py  models.py  serializers.py  urls.py  views.py
(+6 files in other folders)
